update user UI and API integration